<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="xyz.lob.referenceofcomputerscience.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_linux"
        android:name="xyz.lob.referenceofcomputerscience.ui.gallery.GalleryFragment"
        android:label="@string/menu_linux"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_windows"
        android:name="xyz.lob.referenceofcomputerscience.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_windows"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_commputer"
        android:name="xyz.lob.referenceofcomputerscience.ui.computer.Commputer"
        android:label="@string/menu_computer"
        tools:layout="@layout/commputer_fragment" />
    <fragment
        android:id="@+id/nav_formuls"
        android:name="xyz.lob.referenceofcomputerscience.ui.formuls.FormulsFragment"
        android:label="@string/menu_formuls"
        tools:layout="@layout/formuls_fragment" />
    <fragment
        android:id="@+id/nav_glossary"
        android:name="xyz.lob.referenceofcomputerscience.ui.Glossary.Glossary"
        android:label="@string/menu_glossary"
        tools:layout="@layout/glossary_fragment" />
    <fragment
        android:id="@+id/nav_web"
        android:name="xyz.lob.referenceofcomputerscience.ui.web.web"
        android:label="@string/menu_web"
        tools:layout="@layout/web_fragment" />
    <fragment
        android:id="@+id/nav_logic"
        android:name="xyz.lob.referenceofcomputerscience.ui.logic.LogicFragment"
        android:label="@string/menu_logic"
        tools:layout="@layout/logic_fragment" />
    <fragment
        android:id="@+id/nav_systemNumber"
        android:name="xyz.lob.referenceofcomputerscience.ui.systemNumber.SystemNumberFragment"
        android:label="@string/menu_systemNumber"
        tools:layout="@layout/system_number_fragment" />
    <fragment
        android:id="@+id/postFragment"
        android:name="xyz.lob.referenceofcomputerscience.recycle.PostFragment"
        android:label="fragment_item_list"
        tools:layout="@layout/fragment_item_list" />


</navigation>